Fix: Acomode overflow en service card para movil en la linea 7

--- a/custom_element_templates/service-card.scss
+++ b/custom_element_templates/service-card.scss
@@ -1,10 +1,10 @@
 .row .col .service-card-container {
   .vc_column-inner {
-    
+
     width: 100vw;
     margin: 0 0 -24px -7%;
     scroll-snap-type: x mandatory;
-    @media (max-width: &md) {
+    @media (max-width: $md) {
       overflow-x: scroll;
     }
     @media (min-width: $md) {
