--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ hr {
   margin: 0 0 -24px -7%;
   scroll-snap-type: x mandatory;
 }
-@media (max-width: .row .col .service-card-container .vc_column-inner md) {
+@media (max-width: 1000px) {
   .row .col .service-card-container .vc_column-inner {
     overflow-x: scroll;
   }
